cabal-version:      2.4
name:               reflex-dom-th
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Christoph Bauer
maintainer:         mail@christoph-bauer.net

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
  build-depends:
                  base
                , megaparsec  
  exposed-modules:    Reflex.Dom.TH
  default-extensions: TemplateHaskell
  build-depends:
              base 
            , megaparsec
            , text
              
  hs-source-dirs:   src
  default-language: Haskell2010


test-suite test-reflex-dom-th
  default-language:
    Haskell2010
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    tests
  main-is:
    test.hs
  build-depends:
            base
          , bytestring
          , filepath
          , megaparsec
          , hspec
          , reflex-dom-th
          , stm >= 2.5.0.2
          , tasty
          , tasty-golden
          , tasty-hspec
          --, hspec-megaparsec

                    
          --, tasty-hspec
          
