cabal-version:      2.4
name:               reflex-dom-th
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Christoph Bauer
maintainer:         mail@christoph-bauer.net

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
  build-depends:
                  base
                , megaparsec  
  exposed-modules:
          Reflex.Dom.TH.Parser
        , Reflex.Dom.TH
  default-extensions: TemplateHaskell
  build-depends:
              base
            , containers
            , megaparsec
            , reflex-dom-core
            , template-haskell
            , text
  ghc-options: -Wall -fwarn-tabs
  hs-source-dirs:   src
  de
<ion-header>
  <ion-toolbar>
    
    <div class="g-row">
      <img src="https://beta.geschenker.net/img/geschenker-logo.png" width="33" height="33">
      
      <ion-title>
	<a href="http://beta.geschenker.net">
	  geschenker.net
	</a>
      </ion-title>
      
      <div class="g-space" ></div>
      <ion-button color="danger" href="https://app.geschenker.net">logout</ion-button>
    </div>
  </ion-toolbar>
</ion-header>
<ion-content >
  <div id="app"></div>
  <ion-tabs id="tabs">
    
    <ion-tab tab="tab-schedule">
      <ion-nav></ion-nav>
    </ion-tab>

    <ion-tab tab="tab-speaker">
      <ion-nav></ion-nav>
    </ion-tab>

    <ion-tab tab="tab-map" component="page-map">
      <ion-nav></ion-nav>
    </ion-tab>

    <ion-tab tab="tab-about" component="page-about">
      <ion-nav></ion-nav>
    </ion-tab>

    <ion-tab-bar slot="bottom">
      <ion-tab-button tab="tab-schedule">
	<ion-icon name="home-outline"></ion-icon>
	<ion-label>Übersicht</ion-label>
      </ion-tab-button>

      <ion-tab-button tab="tab-speaker">
	<ion-icon name="cash-outline"></ion-icon>
	<ion-label>Forderungen</ion-label>
      </ion-tab-button>

      <ion-tab-button tab="tab-map">
	<ion-icon name="person-outline"></ion-icon>
	<ion-label>Profil</ion-label>
      </ion-tab-button>

    </ion-tab-bar>

  </ion-tabs>

fault-language: Haskell2010


test-suite test-reflex-dom-th
  default-language:
    Haskell2010
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    tests
  main-is:
    test.hs
  build-depends:
            base
          , bytestring
          , filepath
          , megaparsec
          , hspec
          , reflex-dom-th
          , stm >= 2.5.0.2
          , tasty
          , tasty-golden
          , tasty-hspec
          --, hspec-megaparsec

                    
          --, tasty-hspec
          
